# archivum-typescript

./: Cargo.toml  README.md  biome.json  package.json
.github/workflows/: ci.yaml
creates/archivum-wasm/: Cargo.toml  package.json
creates/archivum-wasm/src/: lib.rs
src/: blob_storage.rs  db.rs  lib.rs  metadata_storage.rs  network_blob_store.rs  repository.rs
