[package]
name = "archivum-core-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
#archivum-core = { path = "../../../archivum-core" }
archivum-core = { git = "https://github.com/archivum-drive/archivum-core.git" }

wasm-bindgen = "0.2"
uuid = { version = "1", features = ["std"] }
console_error_panic_hook = "0.1"
smallvec = "1"

[profile.release]
lto = true
opt-level = "s"
